--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root{
     --primary-color: Teal;
     --secondary-color: Navy;
-    --tertiary-color: OrangeRed;
+    --tertiary-color: orange;
 }
 
 *{
@@ -20,7 +20,7 @@ header{
     position: -webkit-sticky;
     position: sticky;
     top:0;
-    background-image:url(../img/hero-pattern.jpg);
+    background-image:url(../img/hero-pattern-faded.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
@@ -32,9 +32,9 @@ header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
-    color: var(--primary-color);
-    background: white;
-    border: 2px solid var(--primary-color);
+    color: var(--secondary-color);
+    background: White;
+    border: 2px solid var(--secondary-color);
     border-radius: 10px;
     padding: 5px;
 }
@@ -43,10 +43,11 @@ header h1 {
 header a {
    text-decoration: none;
     color: var(--primary-color);
-    background: white;
+    background: var(--tertiary-color);
     border: 2px solid var(--secondary-color);
     border-radius: 10px;
     margin: 0px 5px 0px 5px;
+    box-shadow: 0px 0px 5px black;
 }
 
 /*header style nav */
@@ -71,45 +72,239 @@ header nav ul li a{
  }
 
  header nav ul li a:hover{
-     background: var(--tertiary-color);
+     background: lightgoldenrodyellow;
      color: var(--secondary-color);
-     border-radius: 15px;
-     text-shadow: none;
+     border-radius: 10px;
+     box-shadow: none;
  }
 
-.page-title{
-    color: var(--primary-color);
-    border-bottom: 4px solid;
-    border-color: var(--primary-color);
-    padding: 0 80px 15px 80px;
-    font-size: 42px;
-    font-weight: normal;
-    font-style: italic;
-    text-align: center;
-       
-}
-
-.page-title h2{
-    display: inline-block;
-
-}
-
 .hero {
-    background-image:url(../img/hero-pattern.jpg);
+    width: 100%;
+    margin: 0 auto 25px auto;
+    background-image:url(../img/hero-pattern-faded.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-    align-items: flex-start;
+    justify-content: center;
+    overflow: auto;
+}
+.hero-img{
+    max-height: 400px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+    border: solid 2px var(--secondary-color);
 }
 
-footer{
-    background-image:url(../img/hero-pattern.jpg);
+.hero-caption{
+    width: 40%;
+    text-align: center;
+    margin:150px 100px 150px 25px;
+    color: var(--secondary-color);
+    border: solid 2px var(--secondary-color);
+    background: white;
+    border-radius: 10px;
+    vertical-align: center;
+    box-shadow: 0 0 5px black;
+}
+
+.hero-caption h2{
+    font-size: 55px;
+    font-style: italic;
+}
+
+.hero-caption h3{
+    font-size: 24px;
+    text-align: left;
+    padding: auto, 25px auto 25px;
+    margin: 0 25px 0 25px;
+}
+
+.body-section{
+    margin:50px 0 50px 0;
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: auto;
+}
+
+.body-section-title{
+    width: 15%;
+    font-size: 36px;
+    text-align: right;
+    padding-right: 50px;
+    color: var(--primary-color);
+    border-right: solid 5px var(--secondary-color);
+}
+
+.about-me{
+    width: 80%;
+    text-align: left;
+    margin-left: 50px;
+    color: var(--primary-color);
+}
+
+.about-me p{
+    margin:5px, 0, 5px, 0;
+    font-size: 24px;
+}
+
+.work{
+    width: 80%;
+    margin-left: 50px;
+}
+.work-grid-wrapper{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.work-grid-container{
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 50px);
+    grid-gap: 5px;
+}
+
+.work-grid-item{
+    padding: 0 0 15px 15px;
+    border: 2px solid var(--secondary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 24px;
+    position: relative;
+    color: darkslategray;
+}
+
+.work-grid-item:hover .work-grid-item::after{
+    opacity: 1;
+}
+
+.work-grid-item::after{
+    content:"";
+    height: 100%;
+    width:100%;
+    background: rgba(255, 255,55,.25);
+    position:absolute;
+    top: 0;
+    left: 0;
+    opacity:0;
+    transition: ease-in 0.5s;
+}
+
+.run-buddy{
+    grid-column: 1 / span 2;
+    grid-row:1 / span 2;
+    background-image: url(../img/run-buddy-thumbnail.jpg);
     background-size: cover;
-    background-attachment: fixed;
-    background-position: 80%;
+}
+
+.fake01{
+    grid-column: 3 / span 1;
+    grid-row:2 / span 2;
+    background-image: url(../img/universe.jpg);
+    background-size: cover;
+}
+
+.fake02{
+    grid-column: 4 / span 1;
+    grid-row:1 / span 2;
+    background-image: url(../img/road.jpg);
+    background-size: cover;
+}
+
+.fake03{
+    grid-column: 1 / span 1;
+    grid-row:3 / span 1;
+    background-image: url(../img/river.jpg);
+    background-size: cover;
+}
+
+.fake04{
+    grid-column: 2 / span 1;
+    grid-row:3 / span 1;
+    background-image: url(../img/servers.jpg);
+    background-size: cover;
+}
+
+.fake05{
+    grid-column: 3 / span 1;
+    grid-row:1 / span 1;
+    background-image: url(../img/oilrig.jpg);
+    background-size: cover;
+}
+
+.fake06{
+    grid-column: 4 / span 1;
+    grid-row:3 / span 1;
+    background-image: url(../img/airplane.jpg);
+    background-size: cover;
+}
+
+.contact{
+    width: 80%;
+    margin-left: 50px;
+}
+
+.contact a{
+    text-decoration: none;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
+    border: 2px solid var(--secondary-color);
+    border-radius: 10px;
+    margin: 0px 5px 0px 5px;
+    box-shadow: 0px 0px 5px black;
+}
+
+/*contact style nav */
+.contact nav {
+    margin: 7px 0;
+ }
+
+/*contact style nav ui li*/
+.contact nav ul{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+ }
+
+.phone{
+    text-decoration: none;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
+    border: 2px solid var(--secondary-color);
+    border-radius: 10px;
+    margin: 0px 5px 0px 5px;
+    box-shadow: 0px 0px 5px black;
+        padding: 10px 15px;
+    font-weight: lighter;
+    font-size: 1.55vw;
+}
+/*contact style nav ui li a*/
+.contact nav ul li a{
+    padding: 10px 15px;
+    font-weight: lighter;
+    font-size: 1.55vw;
+ }
+/*contact style nav ui li a hover*/
+ .contact nav ul li a:hover{
+     background: lightgoldenrodyellow;
+     color: var(--secondary-color);
+     border-radius: 10px;
+     box-shadow: none;
+ }
+
+
+footer{
     width: 100%;
     padding: 40px 35px;
     display:flex;
@@ -121,19 +316,152 @@ footer{
 footer h2{
     color: var(--secondary-color);
     font-size: 30px;
-    margin: 0;
-    background: White;
-    border: 2px solid var(--secondary-color);
-    border-radius: 10px;
+
 }
 footer div{
     line-height: 1.5;
     text-align: right;
-    background: white;
-    border: 2px solid var(--secondary-color);
-    border-radius: 10px;
-    padding: 5px;
-    vertical-align: auto;
+
 }
 
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER*/
+@media screen and (max-width: 980px){
+    header{
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
 
+    header h1{
+        width: 100%;
+        text-align:center;
+    }
+    
+    header nav ul{
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+    
+    header nav ul li a {
+        font-size: 20px;
+    }
+    
+    footer h2, footer div{
+        text-align: center;
+        width: 100%;
+    }
+    
+    .hero-caption{
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+    }
+    
+    .hero-caption h3{
+        text-align: center;
+    }
+
+    .hero-caption h4{
+        text-align: center;
+    }
+
+    .hero-img{
+        display: inline-block;
+    }
+
+    .body-section-title{
+        width:80%;
+        border-right:none;
+        border-bottom:solid 5px var(--secondary-color);
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .work-grid-item{
+        font-size: 16px;
+    }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER*/
+@media screen and (max-width: 768px){
+    header nav ul li{ 
+        margin: 20px;
+        padding: 20px;
+    }
+
+    section{
+        padding: 30px 15px;
+    }
+
+   .body-section h3{
+        flex: 1 100%;
+        text-align: center;
+    }
+
+    .about-me{
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .work-grid-container{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 50px 50px 50px 50px 50px 50px;
+    }
+
+    .run-buddy{
+        grid-column: 1 / span 2;
+        grid-row: 1/ span 2;
+    }
+
+    .fake01{
+        grid-column: 1 / span 1;
+        grid-row: 5/ span 2;
+    }
+    .fake02{
+        grid-column: 2 / span 1;
+        grid-row: 4/ span 2;
+    }
+    .fake03{
+        grid-column: 1 / span 1;
+        grid-row: 3/ span 1;
+    }
+    .fake04{
+        grid-column: 2 / span 1;
+        grid-row: 3/ span 1;
+    }
+    .fake05{
+        grid-column: 1 / span 1;
+        grid-row: 4/ span 1;
+    }
+    .fake06{
+        grid-column: 2 / span 1;
+        grid-row: 6/ span 1;
+    }
+
+    .contact nav ul li{ 
+        margin: 10px;
+        padding: 10px;
+        font-size: 12px;
+    }
+
+    .contact nav ul li a{ 
+        margin: 5px;
+        padding: 5px;
+        font-size: 12px;
+    }
+
+
+    
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER*/
+@media screen and (max-width: 575px){
+    .hero-caption{
+        width: 100%
+    }
+    
+    .body-section-title{
+        width: 95%
+    }
+}
